# lite-deeplearning-studio

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  agent.md  docker-compose.yml  pyproject.toml
app/: __init__.py  api.py  main.py  models.py  task_catalog.py
data_packs/: future_creator_image_task.json  future_creator_sensor.json  general_image_basic_shapes.json  general_object_detection_basic_shapes.json  general_qa_school.json  general_qa_science.json  general_sensor_environment.json  general_sensor_health.json  general_sensor_motion.json  general_text_emotions.json  general_text_news.json  general_text_spam.json  general_text_weather.json  index.json  smart_museum_image_task.json  smart_museum_qa.json  smart_museum_text.json
docs/: ACCEPTANCE_TEST_REPORT.md  ALGORITHM_CATALOG.md  APPLICATION_CASES_SHORTLIST.md  APPLICATION_CASES_V1_REPORT.md  DATASET_FORMAT.md  DEPLOYMENT.md  GITHUB_RELEASE.md  HARDWARE_CHECKLIST.md  INSTALLATION.md  PRD_APPLICATION_CASES.md  PRD_EDUCATION.md  PRD_LIGHTWEIGHT_WORKFLOW.md  PRD_OBJECT_DETECTION.md  PROJECT_OVERVIEW.md  TRAINING_FUTURE_CREATOR.md  TRAINING_INDEX.md  TRAINING_SMART_MUSEUM.md  acceptance-test-report.json
packaging/: build_release.py  build_student_installer.py
scripts/: acceptance_check.py  download_pretrained.py  start_studio.py
static/: app.js  collect.js  detect.js  learn.js  styles.css  tutorial.js
templates/: _tutorial.html  base.html  collect.html  competition.html  error.html  index.html  learn_deep_learning.html  playground_detect.html  project.html  result.html  (+1 more)
(+29 files in other folders)
